order service apis bug fix